# sentinel

./: .gitignore  README.md  docker-compose.yml
app/: CMakeLists.txt  Dockerfile  main.cpp
redis-sentinel/: Dockerfile
sentinel/: Dockerfile
